<resources>
    <string name="app_name">Kima</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rules_dialog_title">Rules:</string>
    <string name="rules_dialog_close_btn_text">Close</string>
    <string name="btn_place_card_text">Play card</string>
    <string name="scoreboard_title">Scoreboard</string>
    <string name="scoreboard_round">Round</string>
    <string name="scoreboard_you">You</string>
    <string name="scoreboard_cpu">CPU</string>
    <string name="scoreboard_main_menu_button">Main menu</string>
    <string name="scoreboard_play_again_button">Play again</string>
    <string name="menu_title">Menu</string>
    <string name="points_text">POINTS</string>
    <string name="app_title">KIMA!</string>
    <string name="btn_start_game">Start game</string>
    <string name="btn_rule_text">Rules</string>
    <string name="btn_close_scoreboard">Close</string>
    <string name="btn_you_won_tricks_dialog">YOU WON!</string>
    <string name="btn_next_trick_dialog">Next trick</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="rules_dialog_into_text">Grundregler

Spelets gång

Man måste alltid följa färg. Saknar man kort i den färg som lagts får man lägga vilket kort man vill.
Om man misslyckas sätts det en så kallad “plump” i spelprotokollet, därav namnet på kortspelet.
Att ta ett stick betyder att man har högsta kortet av de som är utlagda. Eller att man lagt en färg som ingen annan spelare har. Det är därför väldigt bra att ha många kort av samma kulör.

1 kort

Första omgången får alla spelare 10 kort vardera. Därefter börjar spelarna (medsols) att gissa hur många stick dessa tror att de kommer ta under denna spelrunda. Man får tippa på allt mellan 10 och 0 stick.
Antalet förutspådda stick får aldrig gå jämnt ut på spelprotokollet. Sista spelaren kan alltså inte alltid välja det han vill. (EX om 3 spelare: Spelare 1 tippar på 5 stick, spelare 2 på 5 stick, spelare 3 får ej välja 0 stick)
Efter att rundan spelats klart tittar man vilka som lyckats ta exakt så många stick de förutspått.
Om en spelare lyckats får denne en etta framför antalet stick. Se protokoll längst ner på sidan.

Spelrundorna fortsätter nu med ett färre kort per gång, enligt spelprotokollet.

Vinnare

När det är dags för en omgång med endast ett kort per person finns det flera olika varianter.
Var spelare får titta på sitt kort och avgöra om det ger vinst eller ej (0 eller 1 stick).
Var spelare håller upp kortet i pannan, utan att titta på det själv.
Genom att se de andras kort avgör spelaren då om denne tror att det egna kortet är bättre eller sämre.
Ingen spelare tittar på något kort och alla chansar på 0 eller 1 stick.

I slutet räknas samtliga poäng och den spelare med flest poäng vinner.</string>
</resources>